--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">AccessibilityTapApp2</string>
-    <string name="accessibility_service_description">Tap Automation Service</string>
+    <string name="accessibility_service_description">Spotify song auto play</string>
+
 
 </resources>
